--- a/html/owpg-main/css/style.css
+++ b/html/owpg-main/css/style.css
@@ -360,8 +360,8 @@ section:nth-child(2) a:hover img:nth-of-type(1), section:nth-child(2) a img:nth-
 }
 section:nth-child(2) a:hover img:nth-of-type(2){
   display: table;
-  background-color: #0a0a9b;
-  border: 1px solid #0a0a9b;
+  background-color: #dae1e7;
+  border: 1px solid #dae1e7;
 }
 section:nth-child(2) h3 img, section:nth-child(2) a img{
   margin: 0 auto 30px;
