--- a/Public/owpg-main/css/style.css
+++ b/Public/owpg-main/css/style.css
@@ -1,3 +1,4 @@
+
 /* Font Face
  ========================================= */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
@@ -260,7 +261,7 @@ section:nth-child(1) p img{
 section:nth-child(1) ul li a{
   color: #cd9933
 }
-section:nth-child(1) figure h1 p{
+section:nth-child(1) figure h1{
   text-transform: uppercase;
   font-size: 54px;
   font-family: 'oklahomaregular';
@@ -268,27 +269,28 @@ section:nth-child(1) figure h1 p{
   color: #000;
   margin: 0;
 }
-section:nth-child(1) figure h1 p{
+section:nth-child(1) figure h1{
   text-transform: uppercase;
   font-family: 'oklahomaregular';
   font-weight: normal;
   width: auto;
   font-size: 54px;
 }
-section:nth-child(1) figure h1 p:nth-child(1){
+section:nth-child(1) figure h1{
   width: 100%;
   display: inline-block;
   font-style: normal;
   color: #000;
   line-height: normal;
 }
-section:nth-child(1) figure h1 p:nth-child(2){
+section:nth-child(1) figure h2{
   font-size: 26px;
   letter-spacing: 1.5px;
   position: relative;
   color: #000;
+  font-family: 'oklahomaregular';
 }
-section:nth-child(1) figure h1 p:nth-child(2):after{
+section:nth-child(1) figure h2:before{
   position: absolute;
   content: "";
   top: calc(50% - 2px);
@@ -297,7 +299,7 @@ section:nth-child(1) figure h1 p:nth-child(2):after{
   left: -150px;
   background-color: #000;
 }
-section:nth-child(1) figure h1 p:nth-child(2):before{
+section:nth-child(1) figure h2:after{
   position: absolute;
   content: "";
   top: calc(50% - 2px);
@@ -305,6 +307,26 @@ section:nth-child(1) figure h1 p:nth-child(2):before{
   width: 135px;
   right: -150px;
   background-color: #000;
+}
+section:nth-child(1) figure figure h3{
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    font-style: italic;
+    margin: 0;
+}
+section:nth-child(1) figure figure h4{
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    display: inline-block;
+}
+section:nth-child(1) figure figure p{
+    font-size: 16px;
+    font-style: italic;
+    width: auto;
+    font-weight: normal;
+    line-height: normal;
 }
 
 
@@ -971,19 +993,16 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(2) figure blockquote{
       margin: 0 0 30px;
   }
-  section:nth-child(1) figure h1 p{
+  section:nth-child(1) figure h1{
       font-size: 38px;
   }
-  section:nth-child(1) figure h1 p:nth-child(2){
-      font-size: 20px;
-  }
-  section:nth-child(1) figure h1 p:nth-child(2):before {
-      width: 47px;
-      right: -56px;
-  }
-  section:nth-child(1) figure h1 p:nth-child(2):after {
+  section:nth-child(1) figure h2:before {
       width: 47px;
       left: -56px;
+  }
+  section:nth-child(1) figure h2:after {
+      width: 47px;
+      right: -56px;
   }
   section:nth-child(3) form input:nth-child(4){
       width: 100%;
@@ -1023,6 +1042,9 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(4) h3, section:nth-child(4) a{
     padding: 40px 15px;
   }
+  section:nth-child(1) figure figure{
+      padding: 0;
+    }
 }
 
 
@@ -1085,23 +1107,22 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   /* section:nth-child(3) form button{
       margin-top: -11px;
   } */
-  section:nth-child(1) figure h1 p:nth-child(2){
+  section:nth-child(1) figure h2{
       font-size: 16px;
   }
-  section:nth-child(1) figure h1 p{
+  section:nth-child(1) figure h1{
       font-size: 30px;
   }
-  section:nth-child(1) figure h1 p:nth-child(2):after{
-      top: calc(50% - 1px);
-      height: 2px;
-      width: 35px;
-      left: -43px;
-  }
-  section:nth-child(1) figure h1 p:nth-child(2):before{
+  section:nth-child(1) figure h2:after{
       top: calc(50% - 1px);
       height: 2px;
       width: 35px;
       right: -43px;
   }
+  section:nth-child(1) figure h2:before{
+      top: calc(50% - 1px);
+      height: 2px;
+      width: 35px;
+      left: -43px;
+  }
 } 
-
