--- a/Public/owpg-main/css/style.css
+++ b/Public/owpg-main/css/style.css
@@ -1,3 +1,4 @@
+
 /* Font Face
  ========================================= */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
@@ -83,7 +84,8 @@ a, button{
 p b{
   font-weight: 600;
 }
-h2{
+h2,
+section:nth-child(2) h1{
   color: #080002;
   text-transform: capitalize;
   font-weight: normal;
@@ -112,6 +114,8 @@ section, footer{
   justify-content: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+  align-content: center;
 }
 section aside, footer aside{
   height: 100%;
@@ -124,7 +128,8 @@ section figure{
   padding: 0 40px;
   width: 100%;
 }
-section h2{
+section h2,
+section:nth-child(2) h1{
   margin-bottom: 50px;
 }
 blockquote{
@@ -225,7 +230,7 @@ nav button{
 /* Home Section [ Section 1 ]
  ========================================= */
 section:nth-child(1){
-  padding: 0;
+  padding: 0 0 0 240px;
   text-align: center;
   background-color: transparent;
   position: relative;
@@ -236,12 +241,12 @@ section:nth-child(1) ul{
   right: 100px;
   bottom: 100px;
 }
-section:nth-child(1) figure{
+/*section:nth-child(1) figure{
   position: relative;
-}
-section:nth-child(1) aside{
+}*/
+/*section:nth-child(1) aside{
   vertical-align: middle;
-}
+}*/
 section:nth-child(1) h1{
   margin: 0;
 }
@@ -249,18 +254,18 @@ section:nth-child(1) h1, section:nth-child(1) p{
   width: 100%;
   display: inline-block;
 }
-section:nth-child(1) p img{
+section:nth-child(1) img{
   display: block;
   position: absolute;
-  top: 130%;
-  left: 0;
+  top: 80%;
+  left: 240px;
   right: 0;
   margin: 0 auto;
 }
-section:nth-child(1) ul li a{
+/*section:nth-child(1) ul li a{
   color: #cd9933
-}
-section:nth-child(1) figure h1 p{
+}*/
+section:nth-child(1) h1{
   text-transform: uppercase;
   font-size: 54px;
   font-family: 'oklahomaregular';
@@ -268,27 +273,28 @@ section:nth-child(1) figure h1 p{
   color: #000;
   margin: 0;
 }
-section:nth-child(1) figure h1 p{
+section:nth-child(1) h1{
   text-transform: uppercase;
   font-family: 'oklahomaregular';
   font-weight: normal;
   width: auto;
   font-size: 54px;
 }
-section:nth-child(1) figure h1 p:nth-child(1){
+section:nth-child(1) h1{
   width: 100%;
   display: inline-block;
   font-style: normal;
   color: #000;
   line-height: normal;
 }
-section:nth-child(1) figure h1 p:nth-child(2){
+section:nth-child(1) h2{
   font-size: 26px;
   letter-spacing: 1.5px;
   position: relative;
   color: #000;
+  font-family: 'oklahomaregular';
 }
-section:nth-child(1) figure h1 p:nth-child(2):after{
+section:nth-child(1) h2:before{
   position: absolute;
   content: "";
   top: calc(50% - 2px);
@@ -297,7 +303,7 @@ section:nth-child(1) figure h1 p:nth-child(2):after{
   left: -150px;
   background-color: #000;
 }
-section:nth-child(1) figure h1 p:nth-child(2):before{
+section:nth-child(1) h2:after{
   position: absolute;
   content: "";
   top: calc(50% - 2px);
@@ -306,9 +312,30 @@ section:nth-child(1) figure h1 p:nth-child(2):before{
   right: -150px;
   background-color: #000;
 }
+section:nth-child(1) h3{
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    font-style: italic;
+    margin: 0;
+    width: 100%;
+}
+section:nth-child(1) h4{
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    display: inline-block;
+}
+section:nth-child(1) p{
+    font-size: 16px;
+    font-style: italic;
+    width: auto;
+    font-weight: normal;
+    line-height: normal;
+}
 
 
-/* Services Section [ Section 2 ]
+/* projects Section [ Section 2 ]
  ========================================= */
 section:nth-child(2){
   position: relative;
@@ -317,16 +344,19 @@ section:nth-child(2){
 section:nth-child(2), section:nth-child(4), section#testimonials{
   background-color: #cd9933;
 }
-section:nth-child(2) figure{
-  max-width: 970px;
+section:nth-child(2) h1{
+	width: 100%;
 }
+/*section:nth-child(2) figure{
+  max-width: 970px;
+}*/
 section:nth-child(2) p{
   max-width: 700px;
   margin: 0 auto;
   display: table;
   text-align: center;
 }
-section:nth-child(2) h3, section:nth-child(2) a{
+section:nth-child(2) h2{
   width: 33.33%;
   font-family: 'oklahomabold';
   font-size: 1.17em;
@@ -363,14 +393,15 @@ section:nth-child(2) a:hover img:nth-of-type(2){
   background-color: #dae1e7;
   border: 1px solid #dae1e7;
 }
-section:nth-child(2) h3 img, section:nth-child(2) a img{
+section:nth-child(2) h2 img, section:nth-child(2) a img{
   margin: 0 auto 30px;
   display: table;
 }
-section:nth-child(2) h3 span, section:nth-child(2) a span{
+section:nth-child(2) h2 span, section:nth-child(2) a span{
   font-size: 18px;
   line-height: 25px;
   width: auto;
+  color: #000;
   border-bottom: 1px solid #000;
   display: inline-block;
   padding-bottom: 10px;
@@ -382,7 +413,7 @@ section:nth-child(2) h3 span, section:nth-child(2) a span{
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-section:nth-child(2) figure blockquote{
+/*section:nth-child(2) figure blockquote{
   margin: 30px 0 0;
 }
 section:nth-child(2) figure:last-child{
@@ -395,13 +426,13 @@ section:nth-child(2) figure:last-child{
   -ms-flex-pack: center;
   justify-content: center;
   margin-bottom: -40px;
-}
-section:nth-child(2) figure:last-child h2{
+}*/
+section:nth-child(2) h1:nth-of-type(2){
   width: 100%;
   padding-bottom: 0;
   margin-top: 70px;
 }
-section:nth-child(2) figure:last-child h3{
+/*section:nth-child(2) figure:last-child h3{
   margin: 20px 0 0;
 }
 section:nth-child(2) figure:last-child h3 a{
@@ -410,7 +441,7 @@ section:nth-child(2) figure:last-child h3 a{
   padding: 0;
   margin: 0;
 }
-
+*/
 
 /* Bio Section [ Section 3 ]
  ========================================= */
@@ -669,7 +700,7 @@ span.d-block {display: block;}
 section#services:after { content: ""; width: 17px; height: 17px; background: #cd9933; position: absolute;
                          top: -165px; border-radius: 50%;} */
 .mt-50 {margin-top: 50px;}
-section:nth-child(2) h3, section:nth-child(2) a {width: 25%;}
+section:nth-child(2) h2 {width: 17%;}
 section:nth-child(3) h3, section:nth-child(3) a {width: 25%; float: left; text-align: center;padding: 50px 0;}
 section:nth-child(4) h3, section:nth-child(4) a {width: 25%; float: left; text-align: center;padding: 100px 15px;margin: 0;text-decoration: none;}
 section:nth-child(4) span {color: #fff; margin: 16px 0; display: block;}
@@ -678,8 +709,8 @@ section:nth-child(4) h3 img, section:nth-child(4) a img { border: 2px solid #fff
                                                           margin: auto;}
 section:nth-child(3) h3 img, section:nth-child(3) a img { margin: 0 auto 30px; display: table; border: 2px solid; 
                                                           width: 110px; padding: 7px;}
-section:nth-child(2) h3 img, section:nth-child(2) a img { margin: 0 auto 10px; display: table; border: 2px solid; width: 110px;}
-section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;padding-bottom: 0;}
+section:nth-child(2) h2 img, section:nth-child(2) a img { margin: 0 auto 10px; display: table; border: 2px solid #000; width: 110px;}
+section:nth-child(2) h2 span, section:nth-child(2) a span {border-bottom: none;padding-bottom: 0;}
 
 
 /* Media Screen
@@ -692,7 +723,7 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(3) form h2{
       margin: 0 auto 40px;
   }
-  section:nth-child(2) h3,section:nth-child(2) a{
+  section:nth-child(2) h2{
       margin: 50px 0 0;
   }
   nav{
@@ -705,21 +736,26 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
 }
 
 @media screen and (max-width: 1199px){
-  /* section:nth-child(1) p img {
+  /* section:nth-child(1) img {
       height: 250px;
   } */
   section:nth-child(1) ul {
       right: 60px;
       bottom: 60px;
   }
-  h2{
+  h2,
+  section:nth-child(2) h1{
       font-size: 42px;
   }
-  section h2{
+  section h2,
+  section:nth-child(2) h1{
       margin-bottom: 35px;
   }
-  section:nth-child(2) h3,section:nth-child(2) a{
+  section:nth-child(2) h2{
       padding: 35px 15px;
+  }
+  section:nth-child(2) h2{
+  	width: 22%;
   }
   section:nth-child(3) form h2 {
       font-size: 28px;
@@ -762,6 +798,12 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
       line-height: 34px;
       margin: 0 0 30px;
   }
+  section:nth-child(1){
+        padding: 0 0 0 185px;
+  }
+  section:nth-child(1) img{
+    left: 185px;
+  }
 }
 
 @media screen and (max-width: 991px){
@@ -769,17 +811,18 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
       right: 50px;
       bottom: 50px;
   }
-  h2 {
+  h2,
+  section:nth-child(2) h1 {
       font-size: 40px;
   }
   p, blockquote{
       font-size: 17px;
       line-height: 32px;
   }
-  section:nth-child(2) h3 span, section:nth-child(2) a span{
+  section:nth-child(2) h2 span, section:nth-child(2) a span{
       line-height: 20px;
   }
-  section:nth-child(2) h3, section:nth-child(2) a{
+  section:nth-child(2) h2, section:nth-child(2) a{
       margin: 30px 0 0;
   }
   section:nth-child(3) p:nth-child(3) {
@@ -860,6 +903,12 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
       line-height: 32px;
       margin: 30px 0 0;
   }
+  section:nth-child(1){
+    padding: 0;
+  }
+  section:nth-child(1) img{
+    left: 0;
+  }
 }
 
 @media screen and (max-width: 920px){
@@ -897,14 +946,15 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
       top: 50px;
       width: 100%;
   }
-  h2 {
+  h2,
+  section:nth-child(2) h1 {
       font-size: 30px;
       padding-bottom: 0;
   }
   /* section:nth-child(1) h1{
       margin: 0 0 45px;
   } */
-  /* section:nth-child(1) p img {
+  /* section:nth-child(1) img {
       height: 250px;
   } */
   section figure{
@@ -926,9 +976,8 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(2) p, section:nth-child(3) p{
       text-align: center;
   }
-  section:nth-child(2) h3, section:nth-child(2) a{
+  section:nth-child(2) h2{
       width: 100%;
-      order: 2;
       margin: 0;
   }
   /* section:nth-child(3) dd, section:nth-child(3) dd figcaption{
@@ -939,7 +988,8 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(3) dd figcaption{
           margin-top: 35px;
   } */
-  section h2{
+  section h2,
+  section:nth-child(2) h1{
       line-height: 45px;
   }
   /* section:nth-child(3) dd figcaption ul li a, footer figcaption ul a{
@@ -971,19 +1021,16 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(2) figure blockquote{
       margin: 0 0 30px;
   }
-  section:nth-child(1) figure h1 p{
+  section:nth-child(1) h1{
       font-size: 38px;
   }
-  section:nth-child(1) figure h1 p:nth-child(2){
-      font-size: 20px;
-  }
-  section:nth-child(1) figure h1 p:nth-child(2):before {
-      width: 47px;
-      right: -56px;
-  }
-  section:nth-child(1) figure h1 p:nth-child(2):after {
+  section:nth-child(1) h2:before {
       width: 47px;
       left: -56px;
+  }
+  section:nth-child(1) h2:after {
+      width: 47px;
+      right: -56px;
   }
   section:nth-child(3) form input:nth-child(4){
       width: 100%;
@@ -1018,11 +1065,14 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   section:nth-child(3) h3, section:nth-child(3) a{
     padding: 20px 0;
   }
-  section:nth-child(2) h3, section:nth-child(2) a, section:nth-child(3) h3, section:nth-child(3) a, section:nth-child(4) h3, section:nth-child(4) a {width: 100%;}
+  section:nth-child(2) h2, section:nth-child(3) h3, section:nth-child(3) a, section:nth-child(4) h3, section:nth-child(4) a {width: 100%;}
   section:nth-child(4) h3 img, section:nth-child(4) a img {margin: auto;}
   section:nth-child(4) h3, section:nth-child(4) a{
     padding: 40px 15px;
   }
+  section:nth-child(1) figure figure{
+      padding: 0;
+    }
 }
 
 
@@ -1085,23 +1135,22 @@ section:nth-child(2) h3 span, section:nth-child(2) a span {border-bottom: none;p
   /* section:nth-child(3) form button{
       margin-top: -11px;
   } */
-  section:nth-child(1) figure h1 p:nth-child(2){
+  section:nth-child(1) h2{
       font-size: 16px;
   }
-  section:nth-child(1) figure h1 p{
+  section:nth-child(1) h1{
       font-size: 30px;
   }
-  section:nth-child(1) figure h1 p:nth-child(2):after{
-      top: calc(50% - 1px);
-      height: 2px;
-      width: 35px;
-      left: -43px;
-  }
-  section:nth-child(1) figure h1 p:nth-child(2):before{
+  section:nth-child(1) h2:after{
       top: calc(50% - 1px);
       height: 2px;
       width: 35px;
       right: -43px;
   }
+  section:nth-child(1) h2:before{
+      top: calc(50% - 1px);
+      height: 2px;
+      width: 35px;
+      left: -43px;
+  }
 } 
-
